Fix spacing between checkbox and icons to use

--- a/src/plugins/faultManagement/fault-manager.scss
+++ b/src/plugins/faultManagement/fault-manager.scss
@@ -147,7 +147,7 @@
 
     &-severity{
         font-size: 2em;
-        margin-left: $interiorMarginLg;
+        margin-left: $interiorMarginSm;
         height: 24.0909px;
     }
 
